--- a/proj/app.yaml
+++ b/proj/app.yaml
@@ -1,10 +1,10 @@
 # [START runtime]
 runtime: python
 env: flex
-entrypoint: gunicorn -b :$PORT mysite.wsgi
+entrypoint: gunicorn -b :$PORT proj.wsgi
 
 beta_settings:
-    cloud_sql_instances: <your-cloudsql-connection-string>
+    cloud_sql_instances: ist-roomsmanagement:europe-west2:ist-roomsmanagement-db
 
 runtime_config:
   python_version: 3
