--- a/proj/requirements.txt
+++ b/proj/requirements.txt
@@ -1,5 +1,5 @@
 Django==1.11.8
-wheel==0.30.0
-gunicorn==19.7.1
-psycopg2==2.7.3.2
-requests==2.18.4
+wheel>=0.30.0
+gunicorn>=19.7.1
+psycopg2>=2.7.3.2
+requests>=2.18.4
